# movies-rest-api

./: .gitignore  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250613_192747_create_movie_tables.rs
src/: db.rs  main.rs  models.rs  route_handler.rs
